crates/ink/tests/ui/event/fail/event-anonymous-too-many-topics.stderr
error: Events with an `anonymous` attribute argument can only have up to 4 fields annotated with an `#[ink(topic)]` attribute
 --> tests/ui/event/fail/event-anonymous-too-many-topics.rs:1:1
  |
1 | #[ink::event(anonymous)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ink::event` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Event: ink::ink_env::Event` is not satisfied
 --> tests/ui/event/fail/event-anonymous-too-many-topics.rs:1:1
  |
1 | #[ink::event(anonymous)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ink::ink_env::Event` is not implemented for `Event`
  |
  = note: this error originates in the attribute macro `ink::event` (in Nightly builds, run with -Z macro-backtrace for more info)
